Add test rollback
